change form styles and login styles

--- a/pages/auth/register.html
+++ b/pages/auth/register.html
@@ -49,12 +49,12 @@
              <div class="LoginTemplate_logoBlock"><img
                      src="https://storage.yandexcloud.net/pp-prod/logo_dc02902ab3.svg" alt="logo"
                      class="LoginTemplate_logo">
-                 <p>Присоединяйтесь к сообществу<br>неравнодушных людей</p>
+                 <p>Присоединяйтесь к сообществу <br> неравнодушных людей, помогайте и <br> принимайте помощь</p>
              </div>
              <div class="LoginTemplate_body">
                  <div style="display: unset;">
                      <div class="Input_inputBlock  LoginPage_input "><label
-                             for="input_vfa83">email</label><input id="input_vfa83" class="Input_input">
+                             for="input_vfa83">email</label><input placeholder="Введите Ваш email" id="input_vfa83" class="Input_input">
                              <svg xmlns="http://www.w3.org/2000/svg"
                              width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
                              <path fill="var(--state-success)"
@@ -69,7 +69,7 @@
                              </svg>
                          <span class="Input_errorMessage"></span></div>
                      <div class="Input_inputBlock  LoginPage_input "><label
-                             for="input_2iqx7">фамилия</label><input id="input_2iqx7" class="Input_input">
+                             for="input_2iqx7">фамилия</label><input placeholder="Ваша фамилия" id="input_2iqx7" class="Input_input">
                              <svg xmlns="http://www.w3.org/2000/svg"
                              width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
                              <path fill="var(--state-success)"
@@ -84,7 +84,7 @@
                              </svg>
                          <span class="Input_errorMessage"></span></div>
                      <div class="Input_inputBlock  LoginPage_input "><label
-                             for="input_cvuo3">имя</label><input id="input_cvuo3" class="Input_input">
+                             for="input_cvuo3">имя</label><input placeholder="Ваше имя" id="input_cvuo3" class="Input_input">
                              <svg xmlns="http://www.w3.org/2000/svg"
                              width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
                              <path fill="var(--state-success)"
@@ -99,7 +99,7 @@
                              </svg>
                          <span class="Input_errorMessage"></span></div>
                      <div class="Input_inputBlock  LoginPage_input "><label
-                             for="input_dvm44">отчество</label><input id="input_dvm44" class="Input_input">
+                             for="input_dvm44">отчество</label><input placeholder="Ваше отчество" id="input_dvm44" class="Input_input">
                              <svg xmlns="http://www.w3.org/2000/svg"
                              width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
                              <path fill="var(--state-success)"
@@ -221,6 +221,13 @@
                  <div style="max-width: 100px;"></div>
              </div>
              <div class="LoginTemplate_buttons">
+                <button
+                     class="Generic_responsive Generic_buttonRoot  LoginPage_loginButton"
+                     disabled="">Далее</button>
+                <div class="LoginPage_botLinks"><a
+                        class=" Generic_textRoot LoginPage_link" href="./login.html"
+                        style="margin: 0px auto;">Уже есть аккаунт?</a>
+                </div>
                  <div class="LoginPage_checkbox">
                      <div><label class="" style="display: flex; align-items: center;"><span>
                                  <div class="checkbox"
@@ -231,23 +238,7 @@
                      <p class="LoginPage_checkboxText">Подтверждаю согласие с условиями <a
                              href="/Пользовательское_соглашение.pdf" target="_blank"
                              class="LoginPage_checkboxLink">пользовательского соглашения</a></p>
-                 </div>
-                 <div class="LoginPage_checkbox">
-                     <div><label class="" style="display: flex; align-items: center;"><span>
-                                 <div class="checkbox"
-                                     style="height: 24px; width: 24px; border-width: 2px; border-style: solid; border-radius: 8px; display: flex; align-items: center; justify-content: center;">
-                                     <svg  xmlns="http://www.w3.org/2000/svg"  width="40" height="40" fill="none" viewBox="0 0 40 40"><path fill="#FF3351" d="M16.433 30a1.669 1.669 0 01-1.216-.533l-8.1-8.617a1.669 1.669 0 012.433-2.283l6.867 7.316L30.433 10.55a1.667 1.667 0 112.467 2.233L17.667 29.45a1.665 1.665 0 01-1.217.55h-.017z"></path></svg>
-                                     <input type="checkbox" name="" hidden="" value=""></div>
-                             </span></label></div>
-                     <p class="LoginPage_checkboxText">Соглашаюсь с <a
-                             href="/Политика_в_области_перс_данных_Подари_подарок.pdf" target="_blank"
-                             class="LoginPage_checkboxLink">политикой обработки персональных данных</a></p>
-                 </div><button
-                     class="Generic_responsive Generic_buttonRoot  LoginPage_loginButton"
-                     disabled="">Дальше</button>
-                 <div class="LoginPage_botLinks"><a
-                         class=" Generic_textRoot LoginPage_link" href="./login.html"
-                         style="margin: 0px auto;">уже есть аккаунт</a></div>
+                     </div>
              </div>
          </div>
      </div>
