--- a/pages/form/form10.html
+++ b/pages/form/form10.html
@@ -250,8 +250,8 @@
     <div class="Default_defaultContainer ">
         <div class="FamilyForm_wrap">
             <div class="FamilyForm_main">
-                <h1 class="FamilyForm_header">Заявка на участие в акции БФ «Подари подарок»</h1>
-                <div class="FamilyForm_section">
+                <h1 class="FamilyForm_header">Результат участия в акции БФ «Подари подарок»</h1>
+                <div class="FamilyForm_section without-background">
                     <div class="FamilyForm_headerMobile"><span>Отправка документов</span><span>10 из 10</span>
                     </div>
                     <div style="opacity: 1;">
@@ -602,11 +602,10 @@
                         </svg>
                         <div class="sd-root-modern__wrapper">
                             <form>
-                                <div class="sv_custom_header"></div>
                                 <div class="sd-container-modern">
                                     <div class="sv-components-row">
                                         <div class="sv-components-column sv-components-column--expandable">
-                                            <div id="sp_130" class="sd-body sd-body--responsive">
+                                            <div id="sp_130" class="sd-body sd-body--responsive" style="padding-left: 0;">
                                                 <div class="sd-page sd-body__page custom-sd-page sd-page__empty-header">
                                                     <div class="sd-row sd-clearfix sd-page__row sd-row--multiple">
                                                         <div data-key="question970"
@@ -627,7 +626,7 @@
                                                                 <div class="sd-text__content sd-question__content"
                                                                     role="presentation"><input id="sq_321i"
                                                                         class="sd-input sd-text" type="text"
-                                                                        placeholder="Напишите ваш ответ" aria-required="true"
+                                                                        placeholder="Введите трек номер" aria-required="true"
                                                                         aria-labelledby="sq_321_ariaTitle"
                                                                         aria-describedby="sq_321_ariaDescription"
                                                                         aria-invalid="false" data-rendered="r"></div>
@@ -668,7 +667,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="NavigationBottom_block"><button
+                    <div class="NavigationBottom_block" style="padding-left: 0;"><button
                             class="NavigationBottom_btn NavigationBottom_primary">СОХРАНИТЬ</button></div>
                 </div>
             </div>
