--- a/pages/form/form3.html
+++ b/pages/form/form3.html
@@ -616,7 +616,6 @@
                                 </svg>
                                 <div class="sd-root-modern__wrapper">
                                     <form>
-                                        <div class="sv_custom_header"></div>
                                         <div class="sd-container-modern">
                                             <div class="sv-components-row">
                                                 <div class="sv-components-column sv-components-column--expandable">
@@ -650,7 +649,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_280i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="Напишите ваш ответ" aria-required="true"
+                                                                                placeholder="" aria-required="true"
                                                                                 aria-labelledby="sq_280_ariaTitle"
                                                                                 aria-describedby="sq_280_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -678,7 +677,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_281i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="Напишите ваш ответ" aria-required="true"
+                                                                                placeholder="" aria-required="true"
                                                                                 aria-labelledby="sq_281_ariaTitle"
                                                                                 aria-describedby="sq_281_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -713,7 +712,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_282i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="Напишите ваш ответ" aria-required="true"
+                                                                                placeholder="" aria-required="true"
                                                                                 aria-labelledby="sq_282_ariaTitle"
                                                                                 aria-describedby="sq_282_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -749,7 +748,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_283i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="Напишите ваш ответ" aria-required="true"
+                                                                                placeholder="" aria-required="true"
                                                                                 aria-labelledby="sq_283_ariaTitle"
                                                                                 aria-describedby="sq_283_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -959,7 +958,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_285i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="Напишите ваш ответ" aria-required="true"
+                                                                                placeholder="" aria-required="true"
                                                                                 aria-labelledby="sq_285_ariaTitle"
                                                                                 aria-describedby="sq_285_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
