--- a/pages/form/form4.html
+++ b/pages/form/form4.html
@@ -590,7 +590,6 @@
                         </svg>
                         <div class="sd-root-modern__wrapper">
                             <form>
-                                <div class="sv_custom_header"></div>
                                 <div class="sd-container-modern">
                                     <div class="sv-components-row">
                                         <div class="sv-components-column sv-components-column--expandable">
@@ -604,7 +603,7 @@
                                                                 data-rendered="r" data-name="question66">
                                                                 <div
                                                                     class="sd-question__header sd-element__header sd-question__header--location-top sd-element__header--location-top">
-                                                                    <h5 class="sd-title sd-element__title sd-question__title sd-question__title--required"
+                                                                    <h5 class="sd-title sd-element__title sd-element__main-title sd-question__title sd-question__title--required"
                                                                         id="sq_286_ariaTitle">
                                                                         <div class="sv-title-actions"><span
                                                                                 class="sv-title-actions__title"><span
@@ -737,7 +736,7 @@
                                                                 data-rendered="r" data-name="question74">
                                                                 <div
                                                                     class="sd-question__header sd-element__header sd-question__header--location-top sd-element__header--location-top">
-                                                                    <h5 class="sd-title sd-element__title sd-question__title"
+                                                                    <h5 class="sd-title sd-element__title sd-element__main-title sd-question__title"
                                                                         id="sq_294_ariaTitle"><span
                                                                             class="sv-string-viewer sv-string-viewer--multiline">Хендмейд</span>
                                                                     </h5>
@@ -751,7 +750,7 @@
                                                                 <div class="sd-text__content sd-question__content"
                                                                     role="presentation"><input id="sq_294i"
                                                                         class="sd-input sd-text" type="text"
-                                                                        placeholder="Напишите ваш ответ" aria-required="false"
+                                                                        placeholder="" aria-required="false"
                                                                         aria-labelledby="sq_294_ariaTitle"
                                                                         aria-describedby="sq_294_ariaDescription"
                                                                         aria-invalid="false" data-rendered="r"></div>
