--- a/pages/form/form5.html
+++ b/pages/form/form5.html
@@ -616,7 +616,6 @@
                                 </svg>
                                 <div class="sd-root-modern__wrapper">
                                     <form>
-                                        <div class="sv_custom_header"></div>
                                         <div class="sd-container-modern">
                                             <div class="sv-components-row">
                                                 <div class="sv-components-column sv-components-column--expandable">
@@ -821,7 +820,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_296i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="Напишите ваш ответ" aria-required="true"
+                                                                                placeholder="" aria-required="true"
                                                                                 aria-labelledby="sq_296_ariaTitle"
                                                                                 aria-describedby="sq_296_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -854,7 +853,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_297i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="Напишите ваш ответ" aria-required="true"
+                                                                                placeholder="" aria-required="true"
                                                                                 aria-labelledby="sq_297_ariaTitle"
                                                                                 aria-describedby="sq_297_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
@@ -885,7 +884,7 @@
                                                                         <div class="sd-text__content sd-question__content"
                                                                             role="presentation"><input id="sq_298i"
                                                                                 class="sd-input sd-text" type="text"
-                                                                                placeholder="Напишите ваш ответ" aria-required="false"
+                                                                                placeholder="" aria-required="false"
                                                                                 aria-labelledby="sq_298_ariaTitle"
                                                                                 aria-describedby="sq_298_ariaDescription"
                                                                                 aria-invalid="false" data-rendered="r">
