--- a/pages/form/form6.html
+++ b/pages/form/form6.html
@@ -617,11 +617,10 @@
                         </svg>
                         <div class="sd-root-modern__wrapper">
                             <form>
-                                <div class="sv_custom_header"></div>
                                 <div class="sd-container-modern">
                                     <div class="sv-components-row">
                                         <div class="sv-components-column sv-components-column--expandable">
-                                            <div id="sp_125" class="sd-body sd-body--responsive">
+                                            <div id="sp_125" class="sd-body sd-body--responsive" style="padding: 0">
                                                 <div class="sd-page sd-body__page custom-sd-page sd-page__empty-header">
                                                     <div class="sd-row sd-clearfix sd-page__row">
                                                         <div data-key="question790"
@@ -632,20 +631,19 @@
                                                                 <div class="sd-question__content" role="presentation">
                                                                     <div class="sd-html">
                                                                         <ol class="documentsList">
-                                                                            <li class="documentTitle">Скан паспорта всех
-                                                                                членов семьи от 14 лет и старше (главная
-                                                                                страница, страница с
-                                                                                пропиской)<span>*</span></li>
-                                                                            <li class="documentTitle">Скан свидетельства
-                                                                                о рождении для детей младше 14
-                                                                                лет<span>*</span></li>
+                                                                            <li class="documentTitle">1. Заявление о предоставлении помощи<span>*</span></li>
+                                                                            <li class="documentTitle">2. Согласие об обработке персональных данных<span>*</span></li>
 
-                                                                            <li class="documentTitle">Скан справки о
-                                                                                доходах всех членов семьи, в том числе:
-                                                                                пенсии, пособия, субсидии, алименты
-                                                                                (полученная не ранее, чем за последние 6
-                                                                                месяцев до обращения в
-                                                                                фонд)<span>*</span>
+                                                                            <li class="documentTitle">3. Скан паспорта всех членов семьи от 14 лет и старше (главная страница, страница с пропиской)<span>*</span>
+                                                                            </li>
+                                                                            <li class="documentTitle">
+                                                                                4. Скан свидетельства о рождении для детей младше 14 лет <span>*</span>
+                                                                            </li>
+                                                                            <li class="documentTitle">
+                                                                                5. Скан справки о составе семьи или выписка из домовой книги (полученная не ранее, чем за последние 6 месяцев до обращения в фонд) <span>*</span>
+                                                                            </li>
+                                                                            <li class="documentTitle">
+                                                                                6. Скан справки о доходах каждого члена семьи, прописанного совместно с заявителем, в том числе: пенсии, пособия, субсидии, алименты (полученная не ранее, чем за последние 6 месяцев до обращения в фонд) <span>*</span>
                                                                                 <ul class="documentDesc">
                                                                                     <li>2-НДФЛ - для трудоустроенных;
                                                                                     </li>
@@ -663,45 +661,35 @@
                                                                                 </ul>
                                                                             </li>
                                                                             <li>
-                                                                                <p class="documentTitle">Скан
+                                                                                <p class="documentTitle">7. Скан
                                                                                     свидетельства о разводе</p>
                                                                                 <p class="documentDesc">Копия
                                                                                     необходима, если родители разведены
                                                                                 </p>
+                                                                                
                                                                             </li>
                                                                             <li>
-                                                                                <p class="documentTitle">Скан
-                                                                                    медицинского заключения/эпикриз
-                                                                                    (полученного не позднее 6 месяцев на
-                                                                                    момент подачи документов)</p>
-                                                                                <p class="documentDesc">Если в семье
-                                                                                    есть сложное заболевание, требующее
-                                                                                    дорогого лечения/не позволяющее
-                                                                                    взрослому работать. </p>
+                                                                                <p class="documentTitle">8. Скан медицинского заключения/эпикриз (последнее на момент подачи документов)</p>
+                                                                                <p class="documentDesc">Если в семье есть сложное заболевание, требующее дорогого лечения/не позволяющее взрослому работать. Документ должен быть за текущий год или не более 6 месяцев до обращения в фонд. </p>
                                                                             </li>
                                                                             <li>
-                                                                                <p class="documentTitle">Скан
-                                                                                    рецепта/выписки из медицинских
-                                                                                    документов, если в запросе на
-                                                                                    оказание помощи есть лекарства</p>
+                                                                                <p class="documentTitle">9. Скан рецепта для рецептурных лекарств / для дорогих лекарственных препаратов</p>
+                                                                                <p class="documentDesc">Если семья просит помочь оплатить эти лекарства</p>
                                                                             </li>
                                                                             <li>
-                                                                                <p class="documentTitle">Скан справки об
-                                                                                    инвалидности, с актуальным сроком
-                                                                                    действия</p>
-                                                                                <p class="documentDesc">При наличии
-                                                                                    инвалидности членов семьи. Фото
-                                                                                    справки должно быть с двух сторон.
+                                                                                <p class="documentTitle">10. Скан справки об инвалидности, с актуальным сроком действия</p>
+                                                                                <p class="documentDesc">При наличии инвалидности членов семьи. Фото справки должно быть с двух сторон. 
                                                                                 </p>
                                                                             </li>
                                                                             <li>
-                                                                                <p class="documentTitle">Фотография
-                                                                                    семьи</p>
+                                                                                <p class="documentTitle">11. Скан индивидуальной программы реабилитации, медицинское заключение (контакт врача, выдавшего данное заключение)</p>
+                                                                                <p class="documentDesc">При необходимости закупки ТСР
+                                                                                </p>
                                                                             </li>
                                                                             <li>
-                                                                                <p class="documentTitle">Видео
-                                                                                    квартиры/дома, где проживает семья
-                                                                                    (видео-обзор всех помещений)</p>
+                                                                                <p class="documentTitle">12. Скан акта материально-бытового обследования от комитета соцзащиты, а также видео жилищных условий</p>
+                                                                                <p class="documentDesc">Если необходима помощь в покупке большого количества материалов для ремонта или дорогостоящих товаров. Акт должен быть оформлен не ранее, чем за последние  6 месяцев до обращения в фонд.
+                                                                                </p>
                                                                             </li>
                                                                         </ol>
                                                                     </div>
@@ -709,6 +697,14 @@
                                                             </div>
                                                         </div>
                                                     </div>
+                                                    <p class="FamilyForm_documentsSectionTitle" style="margin-bottom: 10px;">Прочие документы</p>
+                                                    <p class="documentDesc" style="font-size: 13px; color: #999b9f">Загрузите еще документы, которых не было в списке, но они также подтверждают вашу сложную ситуацию
+                                                    <p class="ps-text">Не принимаются:</p>
+                                                    <ul>
+                                                        <li>файлы, сжатые в архив;</li>
+                                                        <li>сканы помятых, замазанных, нечитаемых документов;</li>
+                                                        <li>сканы документов, перевёрнутые на бок или верх тормашками.</li>
+                                                    </ul>
                                                     <div class="sd-row sd-clearfix sd-page__row">
                                                         <div data-key="question800"
                                                             style="flex: 1 1 100%; min-width: min(100%, 300px); max-width: 100%;">
@@ -718,17 +714,6 @@
                                                                 aria-labelledby="sq_300_ariaTitle"
                                                                 aria-describedby="sq_300_ariaDescription"
                                                                 data-rendered="r" data-name="question80">
-                                                                <div
-                                                                    class="sd-question__header sd-element__header sd-question__header--location-top sd-element__header--location-top">
-                                                                    <h5 class="sd-title sd-element__title sd-question__title sd-question__title--required"
-                                                                        id="sq_300_ariaTitle" aria-label="Документы">
-                                                                        <span
-                                                                            class="sv-string-viewer sv-string-viewer--multiline">Документы</span><span
-                                                                            data-key="req-sp">&nbsp;</span><span
-                                                                            data-key="req-text"
-                                                                            class="sd-question__required-text"
-                                                                            aria-hidden="true">*</span></h5>
-                                                                </div>
                                                                 <div class="sd-question__content" role="presentation">
                                                                     <div class="sd-file"><input type="file"
                                                                             tabindex="-1" class="sd-visuallyhidden"
