--- a/pages/auth/login.html
+++ b/pages/auth/login.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="LoginTemplate_body">
                     <div class="Input_inputBlock  LoginPage_input "><label
-                            for="input_4hey8">email</label><input id="input_4hey8" class="Input_input">
+                            for="input_4hey8">e-mail</label><input placeholder="Введите Ваш email" id="input_4hey8" class="Input_input">
                             <svg xmlns="http://www.w3.org/2000/svg"
                             width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
                             <path fill="var(--state-success)"
@@ -73,7 +73,7 @@
                             </svg>
                         <span class="Input_errorMessage"></span></div>
                     <div class="Input_inputBlock  LoginPage_input "><label
-                            for="input_dgi03">пароль</label><input id="input_dgi03" class="Input_input"
+                            for="input_dgi03">пароль</label><input placeholder="Введите Ваш пароль" id="input_dgi03" class="Input_input"
                             type="password">
                             <svg xmlns="http://www.w3.org/2000/svg"
                             width="40" height="40" fill="none" viewBox="0 0 40 40" class="Input_icon Input_icon-success">
@@ -87,14 +87,7 @@
                                     d="M20 3.333a16.667 16.667 0 100 33.334 16.667 16.667 0 000-33.334zm0 25a1.666 1.666 0 110-3.332 1.666 1.666 0 010 3.332zm1.667-6.666a1.667 1.667 0 01-3.334 0v-8.334a1.667 1.667 0 013.334 0v8.334z">
                                 </path>
                             </svg>
-                        <button class="Input_passwordVisible"><svg width="32" height="32"
-                                viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M21.335 11.4069L22.2682 11.0474L21.335 11.4069ZM21.335 12.5932L20.4018 12.2337L21.335 12.5932ZM2.66492 11.4068L1.73175 11.0474L2.66492 11.4068ZM2.66492 12.5932L1.73175 12.9526L2.66492 12.5932ZM3.5981 11.7663C4.89784 8.39171 8.17084 6 12 6V4C7.31641 4 3.31889 6.92667 1.73175 11.0474L3.5981 11.7663ZM12 6C15.8291 6 19.1021 8.39172 20.4018 11.7663L22.2682 11.0474C20.681 6.92668 16.6835 4 12 4V6ZM20.4018 12.2337C19.1021 15.6083 15.8291 18 12 18V20C16.6835 20 20.681 17.0733 22.2682 12.9526L20.4018 12.2337ZM12 18C8.17084 18 4.89784 15.6083 3.5981 12.2337L1.73175 12.9526C3.31889 17.0733 7.31641 20 12 20V18ZM20.4018 11.7663C20.4597 11.9165 20.4597 12.0835 20.4018 12.2337L22.2682 12.9526C22.5043 12.3396 22.5043 11.6604 22.2682 11.0474L20.4018 11.7663ZM1.73175 11.0474C1.49567 11.6604 1.49567 12.3396 1.73175 12.9526L3.5981 12.2337C3.54022 12.0835 3.54022 11.9165 3.5981 11.7663L1.73175 11.0474Z"
-                                    fill="#292929"></path>
-                                <circle cx="12" cy="12" r="3" stroke="#292929" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round"></circle>
-                            </svg></button><span class="Input_errorMessage"></span></div>
+                            <span class="Input_errorMessage"></span></div>
                 </div>
                 <div class="LoginTemplate_buttons"><button
                         class="Generic_responsive Generic_buttonRoot  LoginPage_loginButton"
@@ -109,6 +102,5 @@
         </div>
     </div>
     <script src="../../scripts/burger.js"></script>
-    <script src="../../scripts/input.js"></script>
 </body>
 </html>
